<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <POU Name="FB_SENS_2_4A_2R_USER_CONFIG" Id="{dfe50027-58ef-4985-85c2-ff4af7d8a8ec}" SpecialFunc="None">
    <Declaration><![CDATA[// EXAMPLE: Customised FB_IODEV_BASE for 2 DI, 4 AI, 2 DO and 2 AO.
//          Overloaded M_UserConfigure() method for User Configuration of channels.
FUNCTION_BLOCK FB_SENS_2_4A_2R_USER_CONFIG EXTENDS FB_IODEV_BASE
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	// Control parameters as in T_IODEV_CTRL
	{attribute 'OPC.UA.DA' := '1'}
	ctrl:	T_IODEV_CTRL;	
	// Status parameters that EXTEND T_IODEV_STAT
	{attribute 'OPC.UA.DA' := '1'}
	{attribute 'OPC.UA.DA.Access' := '1'}
	stat:	T_IODEV_STAT_2_4A_2R;	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//
// TODO_USER
//
//
// Set References
RefCtrl	REF=ctrl;
RefStat	REF=stat;

// Set number of channels for each type.
// Default values are set to zero.
// Set whatever is not zero, i.e. whatever is defined.
// WARNING: The values MUST match the sizes of corresponding arrays above !!!
//
cfg.nNum_DI		:=	2; 	// Number of digital INPUT signals,      arrDI:	ARRAY [0..1]
cfg.nNum_AI		:=	4; 	// Number of analog INT  INPUT signals,  arrAI:	ARRAY [0..3]
cfg.nNum_RI		:=	2; 	// Number of analog REAL INPUT signals,  arrRI:	ARRAY [0..3]


//
// Set pointers for EXISTING arrays ONLY, e.g. arrDI, arrAI, etc.
//
pArrDI	:= ADR(stat.arrDI[0]);
pArrAI	:= ADR(stat.arrAI[0]);
pArrRI	:= ADR(stat.arrRI[0]);

//
// Execute the base class object FB_IODEV_BASE
//
SUPER^();

]]></ST>
    </Implementation>
    <Method Name="M_UserConfigure" Id="{2ed1252c-6321-4945-8861-2399aae3566a}">
      <Declaration><![CDATA[// TODO_USER
//
// Define individual channel configurations, if used.
METHOD M_UserConfigure
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// TODO_USER
//
// Example implementation.
// Hard code any signal configuration.
//

// Configuration parameter cfg.bUserConfig defines if 
// the hard-coded configuration below should be used or
// the signals will be configured from the WS.

//
// Digital signals
//
// Digital inputs (defined in stat structure T_IODEV_STAT_CUSTOM)
// Signal DI[0] is a door open signal
// Signal DI[1] is a light switch signal
stat.arrDI[0].M_Configure('CLOSED', 'OPEN');
stat.arrDI[1].M_Configure('OFF',    'ON');


//
// Analog signals
//
// Analog inputs of type INT (defined in stat structure T_IODEV_STAT_2_4A_2R)
stat.arrAI[0].M_Configure(CONVERSION_IODEV_NONE, 		0.0,   0.0, 0.0);
stat.arrAI[1].M_Configure(CONVERSION_IODEV_LINEAR, 		2.0,   1.0, 0.0);
stat.arrAI[2].M_Configure(CONVERSION_IODEV_QUADRATIC,	2.0,   1.0, 5.0);
// Edwards pressure guage
// P =10^(1.5*V - 12)    [mbar]
// 16-bit A/D converter, +=10V, e.g. EL3102.
// 1V = 2^16/10/2 = 3276.8 bit
// P = 10^(1.5*V - 12) = 10^(1.5/3276.8*bit - 12) = 10^(0.000457763*bit - 12)
stat.arrAI[3].M_Configure(CONVERSION_IODEV_EXP10, 	0.000457763, -12.0, 0.0);	



//
// Analog inputs of type REAL (defined in stat structure T_IODEV_STAT_2_4A_2R)
//
stat.arrRI[0].M_Configure(CONVERSION_IODEV_NONE, 		0.0,   0.0, 0.0);
stat.arrRI[1].M_Configure(CONVERSION_IODEV_LINEAR, 		2.0,   1.0, 0.0);


]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_SENS_2_4A_2R_USER_CONFIG">
      <LineId Id="126" Count="5" />
      <LineId Id="141" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="91" Count="1" />
      <LineId Id="90" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="80" Count="1" />
      <LineId Id="158" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="94" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="68" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="72" Count="1" />
      <LineId Id="159" Count="0" />
      <LineId Id="96" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_SENS_2_4A_2R_USER_CONFIG.M_UserConfigure">
      <LineId Id="113" Count="0" />
      <LineId Id="108" Count="4" />
      <LineId Id="35" Count="1" />
      <LineId Id="34" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="23" Count="1" />
      <LineId Id="85" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="50" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="10" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="84" Count="0" />
      <LineId Id="26" Count="2" />
      <LineId Id="86" Count="0" />
      <LineId Id="29" Count="0" />
      <LineId Id="47" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="64" Count="4" />
      <LineId Id="46" Count="0" />
      <LineId Id="81" Count="0" />
      <LineId Id="120" Count="0" />
      <LineId Id="123" Count="6" />
      <LineId Id="121" Count="1" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>